# graph-id-db

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml
benchmarks/: benchmark_finder.py
benchmarks/benchmark_files/: graphids.csv
filebase/: README.md  assimilate.py  assimilate_iza.py  assimilate_mp.py  compute.py  download_mp_cifs.py  iza.py  mp.py
graph_id_db/: finder.py
graphid_db/: __init__.py  finder.py
raw/id_comp_jsons/Ac/: Ac1.json
raw/id_comp_jsons/Ac2AgPb/: Ac2Ag1Pb1.json
raw/id_comp_jsons/Ac2Br2O/: Ac2Br2O1.json
raw/id_comp_jsons/Ac2CdGa/: Ac2Cd1Ga1.json
raw/id_comp_jsons/Ac2CdHg/: Ac2Cd1Hg1.json
raw/id_comp_jsons/Ac2CuSi/: Ac2Cu1Si1.json
raw/id_comp_jsons/Ac2InGa/: Ac2In1Ga1.json
raw/id_comp_jsons/Ac2IrAu/: Ac2Ir1Au1.json
raw/id_comp_jsons/Ac2IrRh/: Ac2Ir1Rh1.json
raw/id_comp_jsons/Ac2MgGa/: Ac2Mg1Ga1.json
raw/id_comp_jsons/Ac2MgPb/: Ac2Mg1Pb1.json
raw/id_comp_jsons/Ac2MgTl/: Ac2Mg1Tl1.json
raw/id_comp_jsons/Ac2S3/: Ac16S24.json  Ac4S6.json
raw/id_comp_jsons/Ac2SiHg/: Ac2Si1Hg1.json
raw/iza/: ABW.json  ACO.json  AEI.json  AEL.json  AEN.json  AET.json  AFG.json  AFI.json  AFN.json  AFO.json  AFR.json  AFS.json  AFT.json  AFV.json  AFX.json  AFY.json  AHT.json  ANA.json  ANO.json  APC.json  APD.json  AST.json  ASV.json  ATN.json  ATO.json  ATS.json  ATT.json  ATV.json  AVE.json  AVL.json  AWO.json  AWW.json  BCT.json  BEC.json  BIK.json  BOF.json  BOG.json  BOZ.json  BPH.json  BRE.json  (+199 more)
tests/: benchmark_finder.py  conftest.py  test_finder.py
(+418752 files in other folders)
